--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,28 @@
 {
-  "name": "simplon/config",
-  "description": "Multi Environment PHP-Config Reader",
-  "homepage": "https://github.com/fightbulc/simplon_config",
-  "version": "0.5.2",
-  "type": "library",
-  "keywords": ["config"],
-  "license": "MIT",
-  "authors": [
-    {
-      "name": "Tino Ehrich",
-      "email": "opensource@efides.com",
-      "role": "developer"
+    "name": "simplon/config",
+    "description": "Simple Config Reader",
+    "homepage": "https://github.com/fightbulc/simplon_config",
+    "version": "0.6.0",
+    "type": "library",
+    "keywords": ["config", "reader"],
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Tino Ehrich",
+            "email": "opensource@efides.com",
+            "role": "developer"
+        }
+    ],
+
+    "minimum-stability": "stable",
+
+    "require": {
+        "php": ">=5.4"
+    },
+
+    "autoload": {
+        "psr-0": {
+            "Simplon\\Config": "src/"
+        }
     }
-  ],
-
-  "minimum-stability": "dev",
-
-  "require": {
-    "php": ">=5.4"
-  },
-
-  "autoload": {
-    "psr-0": {
-      "Simplon\\Config": "src/"
-    }
-  }
 }
